[metadata]
name = tapsumzad
keywords = learning timestamp
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts = 
    tapsum2json = tapsum2json:main
